Promenio instagram link

--- a/mreze.html
+++ b/mreze.html
@@ -22,7 +22,7 @@
     </header>
     <section>
         <p>Za dalju saradnju možete mi se javiti na sledećim društvenim mrežama: 
-        <a href="https://www.instagram.com/viktorr.01/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/viktor_tanaskovic/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.facebook.com/viktor.tanaskovic" target="_blank"><i class="fab fa-facebook"></i></a></p>
         <p>Takođe koristim    <a href="https://www.whatsapp.com/"><i class="fab fa-whatsapp"></i></a>   i   <a href="https://www.viber.com/en/"><i class="fab fa-viber"></i></a>.</p>
         
