--- a/partneri.html
+++ b/partneri.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style/kontakt.css">
-    <title>Kontakt</title>
+    <link rel="stylesheet" href="style/partneri.css">
+    <title>Partneri</title>
   </head>
   <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -43,8 +44,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="galerija.html">Galerija</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="kontakt.html">Kontakt<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="kontakt.html">Kontakt</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="faq.html">Često postavljana pitanja</a>
@@ -62,61 +63,60 @@
           </nav>
           <section>
             <div class="container">
-                <h2 class="display-4">Kontakt</h2>
+                <h2 class="display-4">Partneri</h2>
                 <hr>
+                <p class="opis">Kompanija KOMPY dugi niz godina sarađuje sa gigantima ovog  posla, kao što su AMD, Intel i NVIDIA. Naše prodavnice su opremljene najnovijim modelima procesora, grafičkih karti, matičnih ploča, napajanja, memorije i ostale kompijuterske opreme.</p>
+                <h1>AMD</h1>
+                <p class="opisi">Naša kompanija svojim korisnicima pruža sve najnovije modele procesora i grafičkih karti koje kompanija AMD proizvodi. Komponente koje želite pronaći možete pogledati ovde:</p>
+                <div class="row">
+                    <div class="col-4">
+                        <a href="https://www.amd.com/en/products/processors-desktop" target="_blank"><img src="img/partneri1.jpg" alt="AMD Ryzen 9" class="slike img-thumbnail"></a>
+                        <br>
+                        <i>Kliknite na sliku iznad za desktop procesore</i>
+                    </div>
+                    <div class="col-4">
+                        <a href="https://www.amd.com/en/products/processors-laptop" target="_blank"><img src="img/partneri2.png" alt="AMD 4000 h-series" class="slike img-thumbnail"></a>
+                        <br>
+                        <i>Kliknite na sliku iznad za laptop procesore</i>
+                    </div>
+                    <div class="col-4">
+                        <a href="https://www.amd.com/en/graphics/radeon-rx-graphics"><img src="img/partneri3.jpg" alt="AMD Graphics" class="slike img-thumbnail"></a>
+                        <br>
+                        <i>Kliknite na sliku iznad za grafičke karte</i>
+                    </div>
+                </div>
+                <hr>
+                <h1>Intel</h1>
+                <p class="opisi">Pored AMD proizvoda u našim radnjama možete pronaći i komponente koje proizvodi Intel.</p>
                 <div class="row">
                     <div class="col-6">
-                        <form action="izlazna.html" method="POST">
-                            <div class="form-group">
-                                <i class="fas fa-user"></i>  <label for="ime_prezime">  Ime i prezime</label>
-                                <input type="text" class="form-control" id="ime_prezime" placeholder="Unesite vaše ime i prezime">
-                            </div>
-                            <div class="form-group">
-                                <i class="far fa-envelope"></i>  <label for="email_adresa">  Email adresa</label>
-                              <input type="email" class="form-control" id="email_adresa" aria-describedby="emailHelp" placeholder="Unesite vašu e-mail adresu">
-                            </div>
-                            <div class="form-group">
-                                <i class="fas fa-phone"></i>  <label for="br_telefona">  Telefon</label>
-                                <input type="tel" class="form-control" id="br_telefona" placeholder="Unesite vaš broj telefona">
-                            </div>
-                            <div class="form-group">
-                              <i class="fas fa-map-marked-alt"></i>  <label for="adresa">  Vaša adresa</label>
-                              <input type="text" class="form-control" id="adresa" placeholder="Unesite vašu adresu">
-                            </div>
-                            <div class="form-group">
-                                <i class="fas fa-heading"></i>  <label for="naslov_poruke">  Naslov porudžbine</label>
-                                <input type="text" class="form-control" id="naslov_poruke" placeholder="Unesite naslov vaše poruke">
-                            </div>
-                            <div class="mb-3">
-                                <i class="far fa-edit"></i>  <label for="validationTextarea">  Poručite ovde</label>
-                                <textarea class="form-control" id="validationTextarea" placeholder="Unesite tekst vaše poruke"></textarea>
-                            </div>
-                            <div class="form-check">
-                              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                              <label class="form-check-label" for="exampleRadios1">
-                                Kupovina
-                              </label>
-                            </div>
-                            <div class="form-check">
-                              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                              <label class="form-check-label" for="exampleRadios2">
-                                Servis
-                              </label>
-                            </div>
-                            <br>
-                            <button type="submit" class="btn btn-outline-secondary btn-lg btn-block"><i class="far fa-paper-plane"></i>  Pošalji</button>
-                          </form>
+                        <a href="https://www.intel.com/content/www/us/en/products/processors.html" target="_blank"><img src="img/partneri4.jpg" alt="Intel Processors" class="slike img-thumbnail"></a>
+                        <br>
+                        <i>Kliknite na sliku iznad za Intel procesore</i>
                     </div>
                     <div class="col-6">
-                      <ul class="list-unstyled lista">
-                          <li><i class="fas fa-map-marked-alt"></i>  Adresa: <span class="float-right">Vojvode Stepe 283, Vozdovac</span></li>
-                          <li><i class="fas fa-phone"></i>  Telefon:<span class="float-right"><a href="tel:+381-60-132-5884">060/132-5884</a></span></li>
-                          <li><i class="far fa-envelope"></i>  E-mail:<span class="float-right"><a href="mailto: viktornrt5719@gs.viser.edu.rs">viktornrt5719@gs.viser.edu.rs</a></span></li>
-                      </ul>
-                      <br>
-                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2832.613254147043!2d20.477827215496912!3d44.7683015790989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a70f8df8b60e1%3A0xd12e2aad5590e385!2z0JLQuNGB0L7QutCwINGI0LrQvtC70LAg0LXQu9C10LrRgtGA0L7RgtC10YXQvdC40LrQtSDQuCDRgNCw0YfRg9C90LDRgNGB0YLQstCwINGB0YLRgNGD0LrQvtCy0L3QuNGFINGB0YLRg9C00LjRmNCwINCR0LXQvtCz0YDQsNC0!5e0!3m2!1ssr!2srs!4v1607260963526!5m2!1ssr!2srs" width="560" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                  </div>
-              </div>
+                        <a href="https://www.intel.com/content/www/us/en/products/discrete-gpus.html" target="_blank"><img src="img/partneri5.jpg" alt="Intel Graphics" class="slike img-thumbnail"></a>
+                        <br>
+                        <i>Kliknite na sliku iznad za Intel grafičke</i>
+                    </div>
+                </div>
+                <hr>
+                <h1>NVIDIA</h1>
+                <p class="opisi">NVIDIA je jedan od najboljih proizvođača grafičkih karti i zbog toga najveći dobavljač grafičkih karti u našim prodavnicama je upravo NVIDIA.</p>
+                <div class="row">
+                    <div class="col-6">
+                        <a href="https://www.nvidia.com/en-us/deep-learning-ai/products/titan-rtx/" target="_blank"><img src="img/partneri6.jpg" alt="NVIDIA Titan-RTX" class="slike img-thumbnail"></a>
+                        <br>
+                        <i>Kliknite na sliku iznad za Titan grafičke kartice</i>
+                    </div>
+                    <div class="col-6">
+                        <a href="https://shop.nvidia.com/en-us/geforce/store/?page=1&limit=9&locale=en-us" target="_blank"><img src="img/partneri7.jpg" alt="NVIDIA GeForce" class="slike img-thumbnail"></a>
+                        <br>
+                        <i>Kliknite na sliku iznad za GeForce grafičke kartice</i>
+                    </div>
+                </div>
+                <br><br>
+                <a href="index.html"><button type="button" class="btn btn-outline-secondary">< < Vratite se na početnu</button></a>
             </div>
           </section>
           <footer>
