--- a/galerija.html
+++ b/galerija.html
@@ -1,97 +1,160 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="stil/index.css">
-    <link rel="stylesheet" href="stil/galerija.css">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Kompanija KOMPY - Prodaja delova računara i laotopova, kao i popravka istih">
+    <meta name="autor" content="Viktor Tanasković">
+    <meta name="keywords" content="AMD, Intel, NVIDIA, delovi računara, delovi laptopova, popravka uredjaja">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+
     <title>Galerija</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Početna strana</a></li>
-                <li><a href="oMeni.html">O meni</a></li>
-                <li><a href="galerija.html" class="active">Galerija</a></li>
-                <li><a href="mreze.html">Društvene mreže</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <ul class="slides">
-            <input type="radio" name="radio-btn" id="img-1" checked />
-            <li class="slide-container">
-            <div class="slide">
-                <img src="images/slika1.jpg" />
+  </head>
+  <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="mapaSajta.html"><img src="img/logo1.png" alt="Logo" width="150px" height="120px"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">KOMPY</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="oNama.html">O nama</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Proizvodi
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="hardver.html">Hardver</a>
+                    <a class="dropdown-item" href="softver.html">Softver</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="racPomoc.html">Servis opreme</a>
+                  </div>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="galerija.html">Galerija<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="kontakt.html">Kontakt</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="faq.html">Često postavljana pitanja</a>
+                </li>
+              </ul>
+              <ul class="navbar-nav mr-5 ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                </li>
+              </ul>
             </div>
-            <div class="nav">
-                <label for="img-6" class="prev">&#x2039;</label>
-                <label for="img-2" class="next">&#x203a;</label>
+          </nav>
+          <section>
+            <div class="container">
+              <h2 class="display-4">Galerija</h2>
+              <hr>
+              <div class="row">
+                <div class="col-12">
+                  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/galerija1.jpg" class="d-block w-100" alt="Intel">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Saradnja sa <strong>Intel-om</strong></h5>
+                          <p>VOIO je od samog početka stekao poverenje kod Intel kompanije, i ovo je naš najveći partner i dobavljač komponenti.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/galerija2.jpg" class="d-block w-100" alt="AMD">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Saradnja sa <strong>AMD-om</strong></h5>
+                          <p>Naša kompanija pored saradnje sa Intel-om, ima saradnju i sa AMD-om, koji je takodje veliki dobavljač komponenti.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/galerija3.jpg" class="d-block w-100" alt="CoolerMaster">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Saradnja sa <strong>CoolerMaster-om</strong></h5>
+                          <p>CoolerMaster je najveći dobavljač hladnjaka, napajanja i kućišta za kompijutere, našoj kompaniji.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/galerija5.jpg" class="d-block w-100" alt="NVIDIA">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Saradnja sa NVIDIA</h5>
+                          <p>NVIDIA kao jedan od najvećih proizvođača grafičkih kartica, takođe snabdeva i našu kompaniju najboljim kartama.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/galerija4.jpg" class="d-block w-100" alt="CoolerMaster">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
                 </div>
-            </li>
-            <input type="radio" name="radio-btn" id="img-2" />
-            <li class="slide-container">
-            <div class="slide">
-                <img src="images/slika2.jpg" />
+              </div>
             </div>
-            <div class="nav">
-                <label for="img-1" class="prev">&#x2039;</label>
-                <label for="img-3" class="next">&#x203a;</label>
-                </div>
-            </li>
-            <input type="radio" name="radio-btn" id="img-3" />
-            <li class="slide-container">
-            <div class="slide">
-                <img src="images/slika3.jpg" />
+          </section>
+          <footer>
+            <div class="row text-center">
+              <div class="col-12">
+                <ul>
+                  <li class="list-inline-item"><a href="oNama.html">O nama</a></li>
+                        <li class="list-inline-item"><a href="hardver.html">Hardver</a></li>
+                        <li class="list-inline-item"><a href="softver.html">Softver</a></li>
+                        <li class="list-inline-item"><a href="faq.html">Česta pitanja</a></li>
+                        <li class="list-inline-item"><a href="kontakt.html">Kontakt</a></li>
+                        <li class="list-inline-item"><a href="racPomoc.html">Servis opreme</a></li>
+                        <li class="list-inline-item"><a href="mapaSajta.html">Mapa sajta</a></li>
+                        <li class="list-inline-item"><a href="reklStrana.html">Strana za reklamaciju robe</a></li>
+                </ul>
+                <p>
+                  <i class="far fa-copyright"></i>
+                      2020, KOMPY,
+                      <a href="mailto:viktornrt5719@gs.viser.edu.rs">viktornrt5719@gs.viser.edu.rs</a>,
+                      <a href="tel:+381-60-132-5884">060/132-5884</a>
+                </p>
+              </div>
             </div>
-            <div class="nav">
-                <label for="img-2" class="prev">&#x2039;</label>
-                <label for="img-4" class="next">&#x203a;</label>
-                </div>
-            </li>
-            <input type="radio" name="radio-btn" id="img-4"  />
-            <li class="slide-container">
-            <div class="slide">
-                <img src="images/slika4.jpg" />
-            </div>
-            <div class="nav">
-                <label for="img-3" class="prev">&#x2039;</label>
-                <label for="img-5" class="next">&#x203a;</label>
-                </div>
-            </li>
-                    <input type="radio" name="radio-btn" id="img-5" />
-            <li class="slide-container">
-            <div class="slide">
-                <img src="images/slika5.jpg" />
-            </div>
-            <div class="nav">
-                <label for="img-4" class="prev">&#x2039;</label>
-                <label for="img-6" class="next">&#x203a;</label>
-                </div>
-            </li>
-                    <input type="radio" name="radio-btn" id="img-6" />
-            <li class="slide-container">
-            <div class="slide">
-                <img src="images/slika6.jpg" />
-            </div>
-            <div class="nav">
-                <label for="img-5" class="prev">&#x2039;</label>
-                <label for="img-1" class="next">&#x203a;</label>
-                </div>
-            </li>
-            
-            <li class="nav-dots">
-                <label for="img-1" class="nav-dot" id="img-dot-1"></label>
-                <label for="img-2" class="nav-dot" id="img-dot-2"></label>
-                <label for="img-3" class="nav-dot" id="img-dot-3"></label>
-                <label for="img-4" class="nav-dot" id="img-dot-4"></label>
-                <label for="img-5" class="nav-dot" id="img-dot-5"></label>
-                <label for="img-6" class="nav-dot" id="img-dot-6"></label>
-            </li>
-        </ul>
-    </section>
-</body>
+          </footer>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
