--- a/izlazna.html
+++ b/izlazna.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <title>Početna strana</title>
+    <link rel="stylesheet" href="style/izlazna.css">
+    <title>Izlaz</title>
   </head>
   <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,8 +23,8 @@
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">KOMPY<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">KOMPY</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="oNama.html">O nama</a>
@@ -40,7 +41,7 @@
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="galerija.html">Galerija</a>
+                    <a class="nav-link" href="galerija.html">Galerija</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="kontakt.html">Kontakt</a>
@@ -59,66 +60,14 @@
               </ul>
             </div>
           </nav>
-          <section class="prvi-section">
+          <section>
             <div class="container">
-              <div class="row">
-                <div class="col-md-5">
-                  <h1>KOMPY</h1>
-                  <p>Kompanija KOMPY se dugi niz godina bavi prodajom i popravkom kompjuterske opreme. Kod nas možete kupiti nove i polovne delove računara i laptopova.</p>
-                </div>
-              </div>
+              <h4 class="display-4">Izlazna strana</h4>
+              <hr>
+              <p>Podaci su uspešno poslati, vratite se na <a href="index.html">početnu stranu</a>.</p>
             </div>
           </section>
-          <section class="drugi-section">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-7">
-                  <div class="card kartica-1" style="width: 18rem;">
-                    <img src="img/popravka.png" class="card-img-top" alt="Servis">
-                    <div class="card-body">
-                      <h5 class="card-title">Servis i popravka</h5>
-                      <p class="card-text">Naša kompanija svojim korisnicima pruža široku vrstu pomoći, od sitnih popravki računara, do krupnih kvarova.</p>
-                      <a href="racPomoc.html" class="btn btn-outline-info">Detaljnije > ></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-5">
-                  <div class="card kartica-2" style="width: 18rem;">
-                    <img src="img/saradnici.png" class="card-img-top" alt="Kompanije">
-                    <div class="card-body">
-                      <h5 class="card-title">Partneri</h5>
-                      <p class="card-text">Naša kompanija je svojim radom uspela da stekne poverenje kod mnogih svetskih giganta računarskog sveta, pa tako imamo dugo partnerstvo sa AMD-om, Intel-om, NVIDIA-om</p>
-                      <a href="partneri.html" class="btn btn-outline-info">Detaljnije > ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <br>
-              <a href="prodajnaMesta.html"><button type="button" class="btn btn-primary btn-lg btn-block">Prodajna mesta</button></a>
-            </div>
-          </section>
-          <footer>
-            <div class="row text-center">
-              <div class="col-12">
-                <ul>
-                  <li class="list-inline-item"><a href="oNama.html">O nama</a></li>
-                        <li class="list-inline-item"><a href="hardver.html">Hardver</a></li>
-                        <li class="list-inline-item"><a href="softver.html">Softver</a></li>
-                        <li class="list-inline-item"><a href="faq.html">Česta pitanja</a></li>
-                        <li class="list-inline-item"><a href="kontakt.html">Kontakt</a></li>
-                        <li class="list-inline-item"><a href="racPomoc.html">Servis opreme</a></li>
-                        <li class="list-inline-item"><a href="mapaSajta.html">Mapa sajta</a></li>
-                        <li class="list-inline-item"><a href="reklStrana.html">Strana za reklamaciju robe</a></li>
-                </ul>
-                <p>
-                  <i class="far fa-copyright"></i>
-                      2020, KOMPY,
-                      <a href="mailto:viktornrt5719@gs.viser.edu.rs">viktornrt5719@gs.viser.edu.rs</a>,
-                      <a href="tel:+381-60-132-5884">060/132-5884</a>
-                </p>
-              </div>
-            </div>
-          </footer>
+          
 
     <!-- Optional JavaScript; choose one of the two! -->
 
