--- a/mapaSajta.html
+++ b/mapaSajta.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style/kontakt.css">
-    <title>Kontakt</title>
+    <link rel="stylesheet" href="style/oNama.css">
+    <title>Mapa sajta</title>
   </head>
   <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -43,8 +43,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="galerija.html">Galerija</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="kontakt.html">Kontakt<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="kontakt.html">Kontakt</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="faq.html">Često postavljana pitanja</a>
@@ -62,68 +62,36 @@
           </nav>
           <section>
             <div class="container">
-                <h2 class="display-4">Kontakt</h2>
-                <hr>
-                <div class="row">
-                    <div class="col-6">
-                        <form action="izlazna.html" method="POST">
-                            <div class="form-group">
-                                <i class="fas fa-user"></i>  <label for="ime_prezime">  Ime i prezime</label>
-                                <input type="text" class="form-control" id="ime_prezime" placeholder="Unesite vaše ime i prezime">
-                            </div>
-                            <div class="form-group">
-                                <i class="far fa-envelope"></i>  <label for="email_adresa">  Email adresa</label>
-                              <input type="email" class="form-control" id="email_adresa" aria-describedby="emailHelp" placeholder="Unesite vašu e-mail adresu">
-                            </div>
-                            <div class="form-group">
-                                <i class="fas fa-phone"></i>  <label for="br_telefona">  Telefon</label>
-                                <input type="tel" class="form-control" id="br_telefona" placeholder="Unesite vaš broj telefona">
-                            </div>
-                            <div class="form-group">
-                              <i class="fas fa-map-marked-alt"></i>  <label for="adresa">  Vaša adresa</label>
-                              <input type="text" class="form-control" id="adresa" placeholder="Unesite vašu adresu">
-                            </div>
-                            <div class="form-group">
-                                <i class="fas fa-heading"></i>  <label for="naslov_poruke">  Naslov porudžbine</label>
-                                <input type="text" class="form-control" id="naslov_poruke" placeholder="Unesite naslov vaše poruke">
-                            </div>
-                            <div class="mb-3">
-                                <i class="far fa-edit"></i>  <label for="validationTextarea">  Poručite ovde</label>
-                                <textarea class="form-control" id="validationTextarea" placeholder="Unesite tekst vaše poruke"></textarea>
-                            </div>
-                            <div class="form-check">
-                              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                              <label class="form-check-label" for="exampleRadios1">
-                                Kupovina
-                              </label>
-                            </div>
-                            <div class="form-check">
-                              <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                              <label class="form-check-label" for="exampleRadios2">
-                                Servis
-                              </label>
-                            </div>
-                            <br>
-                            <button type="submit" class="btn btn-outline-secondary btn-lg btn-block"><i class="far fa-paper-plane"></i>  Pošalji</button>
-                          </form>
-                    </div>
-                    <div class="col-6">
-                      <ul class="list-unstyled lista">
-                          <li><i class="fas fa-map-marked-alt"></i>  Adresa: <span class="float-right">Vojvode Stepe 283, Vozdovac</span></li>
-                          <li><i class="fas fa-phone"></i>  Telefon:<span class="float-right"><a href="tel:+381-60-132-5884">060/132-5884</a></span></li>
-                          <li><i class="far fa-envelope"></i>  E-mail:<span class="float-right"><a href="mailto: viktornrt5719@gs.viser.edu.rs">viktornrt5719@gs.viser.edu.rs</a></span></li>
-                      </ul>
-                      <br>
-                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2832.613254147043!2d20.477827215496912!3d44.7683015790989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a70f8df8b60e1%3A0xd12e2aad5590e385!2z0JLQuNGB0L7QutCwINGI0LrQvtC70LAg0LXQu9C10LrRgtGA0L7RgtC10YXQvdC40LrQtSDQuCDRgNCw0YfRg9C90LDRgNGB0YLQstCwINGB0YLRgNGD0LrQvtCy0L3QuNGFINGB0YLRg9C00LjRmNCwINCR0LXQvtCz0YDQsNC0!5e0!3m2!1ssr!2srs!4v1607260963526!5m2!1ssr!2srs" width="560" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                  </div>
-              </div>
+              <h2 class="display-4">Mapa sajta</h2>
+              <hr>
+              <ul>
+                <li><a href="index.html">Početna strana</a></li>
+                <ul>
+                    <li><a href="partneri.html">Naši partneri u poslu</a></li>
+                </ul>
+                <li><a href="oNama.html">O nama</a></li>
+                <li><a href="#">Proizvodi</a></li>
+                  <ul>
+                    <li><a href="hardver.html">Hardver</a></li>
+                    <li><a href="softver.html">Softver</a></li>
+                    <li><a href="racPomoc.html">Servis opreme</a></li>
+                  </ul>
+                </li>
+                <li><a href="galerija.html">Galerija</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="faq.html">Često postavljana pitanja</a></li>
+                <li><a href="stampa.html" target="_blank">Strana za štampu</a></li>
+                <li><a href="Onama.pdf" target="_blank">Strana za preuzimanje</a></li>
+                <li><a href="prodajnaMesta.html">Prodajna mesta</a></li>
+                <li><a href="reklStrana.html">Strana za reklamaciju robe</a></li>
+              </ul>
             </div>
           </section>
           <footer>
             <div class="row text-center">
               <div class="col-12">
                 <ul>
-                        <li class="list-inline-item"><a href="oNama.html">O nama</a></li>
+                  <li class="list-inline-item"><a href="oNama.html">O nama</a></li>
                         <li class="list-inline-item"><a href="hardver.html">Harvder</a></li>
                         <li class="list-inline-item"><a href="softver.html">Softver</a></li>
                         <li class="list-inline-item"><a href="faq.html">Česta pitanja</a></li>
